tests/should_fail/terminates/ensures_terminates.stderr
error: Recursive function occurrence which is not a function call
 --> ensures_terminates.rs:9:1
  |
9 | pub fn f() {}
  | ^^^^^^^^^^
  |
note: Recursive occurrence
 --> ensures_terminates.rs:7:12
  |
7 | #[ensures(!f.postcondition((), ()))]
  |            ^

error: aborting due to 1 previous error

